# TwoFactorAuth

./: .env  .gitignore  ;  Cargo.toml  Untitled  diesel.toml  docker-compose.yml  dockerfile  prebuild.dockerfile  prebuild_amd64.dockerfile  prebuild_base.dockerfile  prebuild_base_amd64.dockerfile
TwoFactorAuthK8s/: auth2fa-app-deployment.yaml  auth2fa-cloudflare-ingress.yaml  auth2fa-deployment.yaml  auth2fa-ingress.yaml  db-deployment.yaml  dummy.yaml  postgres-configMap.yaml  postgres-pvc.yaml  postgres-storage.yaml
TwoFactorAuthK8s/terraform/: 0-provider.tf  1-vpc.tf  3-subnets.tf  5-routes.tf  6-eks.tf  7-nodes.tf  8-api-gateway.tf  9-integration.tf  terraform.tfstate  terraform.tfstate.backup
db_test/: docker-compose.yaml  postgres-secret.yaml
migrations/2023-02-23-175533_create_users/: up.sql
migrations/2024-06-01-203441_create_tables/: down.sql  up.sql
migrations/2024-06-11-222548_add_sessions_constraint/: down.sql  up.sql
migrations/2024-06-13-160920_create_tables/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/actor/: mod.rs  models.rs  tests.rs  user.rs
src/actor/actions/: create_user.rs  delete_user.rs  get_user.rs  login.rs  mod.rs  reset_password.rs  token_has_expired.rs  verify_otp.rs  verify_password.rs
src/actors/: mod.rs  user.rs
src/auth/: cache.rs  middle_ware.rs  mod.rs  models.rs
src/config/: mod.rs
src/database/: connect.rs  connection.rs  mod.rs  models.rs
src/handlers/: mod.rs  models.rs  user.rs
src/middleware/: authentication.rs  cache.rs  expiration.rs  mod.rs  models.rs
