[package]
name = "two_factor_auth_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-web = "4.7.0"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
config = "0.14.0"
diesel = { version = "2.2.0", features = ["uuid", "r2d2", "postgres"] }
diesel_migrations = "2.2.0"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
parse_duration = "2.1.1"
envconfig = "0.10.0"
totp-rs = { version = "5.5.1", features = ["qr"] }
magic-crypt = "3.1.13"
actix-cors = "0.7.0"
tokio = {version = "1", features = ["full"]}
futures-util = "0.3.30"

# DEPENDENCIES SPECIFIC TO AUTH
actix-web-httpauth = "0.8.2"
actix-web-lab = "0.20.2"
argonautica = "0.2.0"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.8"
